# Pong

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
headers/: Ball.h  Board.h  Colors.h  Game.h  GameConfig.h  Menu.h  Music.h  Paddle.h  Player.h  Pong.h
src/: Ball.cpp  Board.cpp  Colors.cpp  Game.cpp  Menu.cpp  Paddle.cpp  Player.cpp  Pong.cpp
